--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,9 +16,7 @@ jobs:
           config_timezone: Asia/Calcutta
           token: ${{ secrets.METRICS_TOKEN }}
 
-          # Manga
-          filename: metrics.plugin.anilist.manga.svg
-          plugin_anilist: yes
-          plugin_anilist_medias: manga
-          plugin_anilist_sections: favorites, reading
-          plugin_anilist_limit: 1
+          # Isometric Calendar
+          plugin_isocalendar: yes
+          plugin_isocalendar_duration: full-year
+          filename: metrics.plugin.isocalendar.svg
