--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,4 +34,5 @@ jobs:
           plugin_anilist_user: vinny267
           plugin_anilist_medias: anime, manga
           plugin_anilist_sections: favorites, reading
-          plugin_anilist_limit: 6
+          plugin_anilist_limit: 3
+          plugin_anilist_shuffle: yes
